# Xscape

./: .gitignore  Cargo.toml  README.md
config/: example-config.toml
crates/ios-sim/: Cargo.toml
crates/ios-sim-common/: Cargo.toml
crates/ios-sim-common/src/: config.rs  error.rs
crates/ios-sim-common/src/api/: project.rs
crates/ios-sim/src/: config.rs  main.rs
crates/ios-sim/src/agent_client/: mod.rs
crates/ios-sim/src/cli/: mod.rs
crates/ios-sim/src/cli/commands/: build.rs  config.rs  devices.rs  interactive.rs  logs.rs  mod.rs  run.rs  vm.rs
crates/ios-sim/src/project/: mod.rs
crates/ios-sim/src/tui/: mod.rs  progress.rs  screen.rs  styles.rs  wizard.rs
crates/ios-sim/src/vm/: mod.rs  novnc.rs  qemu.rs
crates/xcode-agent/: Cargo.toml
crates/xcode-agent/src/: main.rs
crates/xcode-agent/src/handlers/: build.rs  health.rs  logs.rs  simulator.rs  sync.rs
crates/xcode-agent/src/server/: mod.rs  routes.rs  state.rs
crates/xcode-agent/src/simctl/: mod.rs
crates/xcode-agent/src/storage/: mod.rs
crates/xcode-agent/src/xcode/: mod.rs
crates/xscape/: Cargo.toml
crates/xscape-agent/: Cargo.toml
crates/xscape-agent/src/: main.rs
crates/xscape-agent/src/handlers/: build.rs  health.rs  mod.rs  simulator.rs  sync.rs
crates/xscape-agent/src/server/: mod.rs  state.rs
crates/xscape-agent/src/simctl/: mod.rs
crates/xscape-agent/src/storage/: mod.rs
crates/xscape-agent/src/xcode/: mod.rs
crates/xscape-common/: Cargo.toml
crates/xscape-common/src/: config.rs  lib.rs
crates/xscape-common/src/api/: build.rs  health.rs  logs.rs  mod.rs  simulator.rs
crates/xscape/src/: config.rs  main.rs
crates/xscape/src/agent_client/: mod.rs
crates/xscape/src/cli/: mod.rs
crates/xscape/src/cli/commands/: build.rs  config.rs  devices.rs  interactive.rs  logs.rs  mod.rs  run.rs  vm.rs
crates/xscape/src/tui/: interactive.rs  screen.rs  styles.rs  wizard.rs
crates/xscape/src/vm/: mod.rs  novnc.rs  qemu.rs
docs/: ARCHITECTURE.md  FUTURE.md  VM-SETUP.md
scripts/: setup-agent.sh  setup-macos-vm.sh  setup-ubuntu.sh
