[package]
name = "ios-sim"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "ios-sim"
path = "src/main.rs"

[dependencies]
ios-sim-common = { workspace = true }

# Async runtime
tokio = { workspace = true }

# HTTP client
reqwest = { workspace = true }

# WebSocket
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# CLI
clap = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# UUID
uuid = { workspace = true }

# Time
chrono = { workspace = true }

# File operations
walkdir = { workspace = true }
ignore = { workspace = true }
tar = { workspace = true }
flate2 = { workspace = true }

# SHA256
sha2 = { workspace = true }

# Bytes
bytes = { workspace = true }

# Open browser
open = "5"

# Directories
dirs = "5"
