[package]
name = "xcode-agent"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "xcode-agent"
path = "src/main.rs"

[dependencies]
ios-sim-common = { workspace = true }

# Async runtime
tokio = { workspace = true }
tokio-stream = { workspace = true }

# HTTP server
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# WebSocket
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# UUID
uuid = { workspace = true }

# Time
chrono = { workspace = true }

# File operations
walkdir = { workspace = true }
tar = { workspace = true }
flate2 = { workspace = true }

# Bytes
bytes = { workspace = true }

# CLI args for agent binary
clap = { workspace = true }

# Async extensions
async-trait = { workspace = true }
